[package]
name = "tempoit"
version = "3.0.0"
authors = ["Samuel Walladge <samuel@swalladge.net>"]
description = "Simple timewarrior to tempo/jira worklog uploader."
readme = "README.md"
keywords = ["cli", "timewarrior", "jira", "tempo"]
repository = "https://git.sr.ht/~swalladge/tempoit"
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json", "cookies"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["full"] }
structopt = { version = "0.3.22", default-features = false }
confy = { git = "https://github.com/rust-cli/confy.git" }
