[package]
name = "tempoit"
version = "3.0.0"
authors = ["Samuel Allan <samuelengineer@fastmail.com>"]
description = "Simple timewarrior to tempo/jira worklog uploader."
readme = "README.md"
keywords = ["cli", "timewarrior", "jira", "tempo"]
repository = "https://git.sr.ht/~swalladge/tempoit"
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
structopt = { version = "0.3.26", default-features = false }
confy = { version = "1.0.0" }
