[package]
name = "tempoit"
version = "4.0.0"
authors = ["Samuel Allan <samuel.allan@fastmail.com>"]
description = "Simple timewarrior to tempo/jira worklog uploader."
readme = "README.md"
keywords = ["cli", "timewarrior", "jira", "tempo"]
repository = "https://github.com/samuelallan72/tempoit"
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json", "cookies", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
structopt = { version = "0.3.26", default-features = false }
confy = { version = "2.0.0" }
